# dependency-injector

./: .gitignore  pyproject.toml
src/: depends.py  resolvers.py
tests/: fake_deps.py  test_injection.py
